--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,16 +22,20 @@ dependencies:
 
   # Local cache
   hive: ^1.0.0
+  hive_flutter: ^0.2.1
 
+  # Graph Client
   graphql_flutter: ^2.1.0
 
   cupertino_icons: ^0.1.2
-
+  path_provider: ^1.3.0
   json_serializable: ^3.2.3
-  build_runner: ^1.7.1
 
+  logger: ^0.7.0+2
 
 dev_dependencies:
+  build_runner: ^1.7.1
+  hive_generator: ^0.5.1
   flutter_test:
     sdk: flutter
   mockito: ^4.1.0
