--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   path_provider: ^1.3.0
   json_serializable: ^3.2.3
-
+  cached_network_image: ^1.1.2+1
   logger: ^0.7.0+2
 
 dev_dependencies:
