--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   # Service locator
   get_it: ^2.0.1
   # Bloc for state management
-  flutter_bloc: ^0.21.0
+  flutter_bloc: ^2.1.1
   # Value equality
-  equatable: ^0.4.0
+  equatable: ^1.0.0
   # Functional programming thingies
   dartz: ^0.8.6
   # Remote API
@@ -27,6 +27,8 @@ dependencies:
   # Graph Client
   graphql_flutter: ^2.1.0
 
+  super_enum: ^0.2.0
+
   cupertino_icons: ^0.1.2
   path_provider: ^1.3.0
   json_serializable: ^3.2.3
@@ -36,6 +38,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^1.7.1
   hive_generator: ^0.5.1
+  super_enum_generator: ^0.2.0
   flutter_test:
     sdk: flutter
   mockito: ^4.1.0
